# Betriebssysteme-UE

./: .gitignore  CMakeLists.txt  README.md  ausgabe.txt  ccut.c  ccut.h  helpers.c  helpers.h  old_file.c
src/: ccut  ccut.c  helpers.c
util/: helpers.h
